@@ -14,13 +14,22 @@ $binaries = new Binaries();
 $page = new Page();
 $n = "\n";
 
-$pieces = explode(" ", $argv[1]);
+if (!isset($argv[1]))
+	exit("ERROR: You must supply a path as the first argument.".$n);
 
-if (!isset($pieces[0]))
-    exit("ERROR: You must supply a path as the first argument.".$n);
+if (!isset($argv[2]))
+{
+	$pieces = explode(" ", $argv[1]);
+	$usenzbname = (isset($pieces[1]) && $pieces[1] == 'true') ? true : false;
+	$path = $pieces[0];
+}
+else
+{
+	$path = $argv[1];
+	$usenzbname = (isset($argv[2]) && $argv[2] == 'true') ? true : false;
+}
+
 $filestoprocess = Array();
-$path = $pieces[0];
-$usenzbname = (isset($pieces[1]) && $pieces[1] == 'true') ? true : false;
 
 if (substr($path, strlen($path) - 1) != '/')
 	$path = $path."/";
@@ -30,7 +39,7 @@ $color_blacklist = 11;
 $color_group = 1;
 $color_write_error = 9;
 
-function categorize() 
+function categorize()
 {
 	$db = new DB();
 	$cat = new Category();
@@ -132,7 +141,7 @@ else
 			$msg = array("Subject" => $firstname['0'], "From" => $fromname, "Message-ID" => "");
 
 			// if the release is in our DB already then don't bother importing it
-			if ($usenzbname and $skipCheck !== true)
+			if ($usenzbname && $skipCheck !== true)
 			{
 				$usename = str_replace('.nzb', '', basename($nzbFile));
 				$dupeCheckSql = sprintf("SELECT * FROM releases WHERE name = %s AND postdate - interval 10 hour <= %s AND postdate + interval 10 hour > %s",
@@ -173,10 +182,10 @@ else
 			}
 			//groups
 			$groupArr = array();
-			foreach($file->groups->group as $group) 
+			foreach($file->groups->group as $group)
 			{
 				$group = (string)$group;
-				if (array_key_exists($group, $siteGroups)) 
+				if (array_key_exists($group, $siteGroups))
 				{
 					$groupID = $siteGroups[$group];
 				}
@@ -189,13 +198,13 @@ else
 			}
 			if ($groupID != -1 && !$isBlackListed)
 			{
-				if ($usenzbname) 
+				if ($usenzbname)
 				{
 						$usename = str_replace('.nzb', '', basename($nzbFile));
 				}
 				if (count($file->segments->segment) > 0)
 				{
-					foreach($file->segments->segment as $segment) 
+					foreach($file->segments->segment as $segment)
 					{
 						$size = $segment->attributes()->bytes;
 						$totalsize = $totalsize+$size;
@@ -232,7 +241,7 @@ else
 						if (false === (mysqlBulk($data, 'releases', 'loaddata', array('query_handler' => array($db, 'queryDirect'), 'error_handler' => array($db, 'Error')))))
 						{
 							trigger_error('mysqlBulk failed!', E_USER_ERROR);
-						} 
+						}
 						else
 						{
 							unset($data);
@@ -248,7 +257,7 @@ else
 							echo $n."\033[38;5;".$color_blacklist."mAveraging ".$nzbsperhour." imports per hour from ".$path."\033[0m".$n;
 						}
 					}
-					else 
+					else
 					{
 						echo $n."Prepared #".$nzbCount." for import in ".relativeTime($time)."\t";
 					}
