@@ -13,13 +13,22 @@ $binaries = new Binaries();
 $page = new Page();
 $n = "\n";
 
-$pieces = explode(" ", $argv[1]);
-
-if (!isset($pieces[0]))
+if (!isset($argv[1]))
 	exit("ERROR: You must supply a path as the first argument.".$n);
+
+if (!isset($argv[2]))
+{
+	$pieces = explode(" ", $argv[1]);
+	$usenzbname = (isset($pieces[1]) && $pieces[1] == 'true') ? true : false;
+	$path = $pieces[0];
+}
+else
+{
+	$path = $argv[1];
+	$usenzbname = (isset($argv[2]) && $argv[2] == 'true') ? true : false;
+}
+
 $filestoprocess = Array();
-$path = $pieces[0];
-$usenzbname = (isset($pieces[1]) && $pieces[1] == 'true') ? true : false;
 
 if (substr($path, strlen($path) - 1) != '/')
 	$path = $path."/";
@@ -29,7 +38,7 @@ $color_blacklist = 11;
 $color_group = 1;
 $color_write_error = 9;
 
-function categorize() 
+function categorize()
 {
 	$db = new DB();
 	$cat = new Category();
@@ -133,7 +142,7 @@ else
 			$msg = array("Subject" => $firstname['0'], "From" => $fromname, "Message-ID" => "");
 
 			// if the release is in our DB already then don't bother importing it
-			if ($usenzbname and $skipCheck !== true)
+			if ($usenzbname && $skipCheck !== true)
 			{
 				$usename = str_replace('.nzb', '', basename($nzbFile));
 				$dupeCheckSql = sprintf("SELECT * FROM releases WHERE name = %s AND postdate - interval 10 hour <= %s AND postdate + interval 10 hour > %s",
@@ -174,10 +183,10 @@ else
 			}
 			//groups
 			$groupArr = array();
-			foreach($file->groups->group as $group) 
+			foreach($file->groups->group as $group)
 			{
 				$group = (string)$group;
-				if (array_key_exists($group, $siteGroups)) 
+				if (array_key_exists($group, $siteGroups))
 				{
 					$groupID = $siteGroups[$group];
 				}
@@ -190,13 +199,13 @@ else
 			}
 			if ($groupID != -1 && !$isBlackListed)
 			{
-				if ($usenzbname) 
+				if ($usenzbname)
 				{
 						$usename = str_replace('.nzb', '', basename($nzbFile));
 				}
 				if (count($file->segments->segment) > 0)
 				{
-					foreach($file->segments->segment as $segment) 
+					foreach($file->segments->segment as $segment)
 					{
 						$size = $segment->attributes()->bytes;
 						$totalsize = $totalsize+$size;
@@ -222,7 +231,7 @@ else
 		{
 			$relguid = sha1(uniqid());
 			$nzb = new NZB();
-		
+
 			if($relID = $db->queryInsert(sprintf("insert into releases (name, searchname, totalpart, groupID, adddate, guid, rageID, postdate, fromname, size, passwordstatus, categoryID, nfostatus, nzbstatus) values (%s, %s, %d, %d, now(), %s, -1, %s, %s, %s, %d, 7010, -1, 1)", $db->escapeString($subject), $db->escapeString($cleanerName), $totalFiles, $groupID, $db->escapeString($relguid), $db->escapeString($postdate['0']), $db->escapeString($postername['0']), $db->escapeString($totalsize), ($page->site->checkpasswordedrar == "1" ? -1 : 0))));
 			{
 				if($nzb->copyNZBforImport($relguid, $nzbFile))
